# larkstack

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  README_zh.md  cf-invocation-log.json  for_claude.txt  invocation-log.json  test-webhook.sh  wrangler.toml
.claude/skills/rust-doc-comments/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.wrangler/cache/: wrangler-account.json
docs/: configuration.md  deploy-cloudflare-workers.md  deploy-railway.md
services/erpnext/: .env.example  Dockerfile  pyproject.toml
services/erpnext/src/: config.py  erpnext_client.py  invoice_ocr.py  keycloak_client.py  lark_approval.py  main.py  sync.py
services/erpnext/tests/: test_expense_flow.py
src/: config.rs  debounce.rs  debounce_do.rs  dispatch.rs  event.rs  handlers.rs  lark.rs  lib.rs  linear.rs  main.rs  models.rs  utils.rs
src/handlers/: lark_event.rs  mod.rs  webhook.rs
src/lark/: bot.rs  cards.rs  mod.rs
src/sinks/lark/: bot.rs  cards.rs  event_handler.rs  mod.rs  models.rs  webhook.rs
src/sources/: mod.rs
src/sources/github/: handler.rs  mod.rs  utils.rs
src/sources/linear/: client.rs  handler.rs  models.rs  utils.rs
src/sources/x/: mod.rs
tests/fixtures/: github_pr_opened.json
