[package]
name = "larkstack"
description = ""
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
