[project]
name = "larkstack-erpnext"
version = "0.1.0"
description = "Lark ↔ ERPNext integration service"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120
